# Sistema-de-Medicao-de-Estacao-Meteorologica-IoT

./: .gitignore  Cargo.toml  README.md
src/application/: Cargo.toml  dados.db
src/application/migrations/: 0001_create_leituras.sql
src/application/src/: api.rs  db.rs  main.rs  models.rs  mqtt.rs  simulador.rs
src/application/static/: editar.html  historico.html  index.html
src/application/static/css/: style.css
src/esp_code/: Cargo.toml
src/esp_code/src/: main.rs
